--- a/source/client/willi/app/src/main/res/layout/activity_login.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_login.xml
@@ -76,6 +76,20 @@
                 android:layout_span="2"
                 />
         </TableRow>
+        <TableRow>
+            <Button
+                android:id="@+id/buttonCallSend"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="buttonSendClick"
+                android:text="Send" />
+            <Button
+                android:id="@+id/buttonReceive"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="buttonReceiveClick"
+                android:text="Receive" />
+        </TableRow>
     </TableLayout>
 
 
