--- a/source/client/willi/app/src/main/res/layout/activity_login.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_login.xml
@@ -90,6 +90,34 @@
                 android:onClick="buttonReceiveClick"
                 android:text="Receive" />
         </TableRow>
+        <TableRow>
+            <Button
+                android:id="@+id/buttonReject1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="buttonReject1Click"
+                android:text="Reject1" />
+            <Button
+                android:id="@+id/buttonReject2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="buttonReject2Click"
+                android:text="Reject2" />
+        </TableRow>
+        <TableRow>
+            <Button
+                android:id="@+id/buttonPark"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="buttonParkClick"
+                android:text="Park" />
+            <Button
+                android:id="@+id/buttonLee"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="buttonLeeClick"
+                android:text="Lee" />
+        </TableRow>
     </TableLayout>
 
 
