--- a/source/client/willi/app/src/main/res/menu/menu_bottom.xml
+++ b/source/client/willi/app/src/main/res/menu/menu_bottom.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <item
+        android:id="@+id/navigation_menu1"
+        android:icon="@android:drawable/ic_menu_recent_history"
+        android:title="Recents" />
+
+    <item
+        android:id="@+id/navigation_menu2"
+        android:icon="@android:drawable/sym_contact_card"
+        android:title="Contacts" />
+
+    <item
+        android:id="@+id/navigation_menu3"
+        android:icon="@android:drawable/ic_dialog_dialer"
+        android:title="Dialpad" />
+
 
 </menu>
