--- a/source/client/willi/app/src/main/res/layout/activity_login.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_login.xml
@@ -8,24 +8,13 @@
 
 
     <TableLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:layout_margin="8dp"
         android:background="@drawable/sixsenses_final"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        <TableRow>
-            <TextView
-                android:id="@+id/textViewSpace"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:layout_span="2"
-                android:textSize="150sp"/>
+        android:gravity="center_vertical">
 
-        </TableRow>
-        <TableRow>
+        <TableRow android:gravity="center">
             <TextView
                 android:id="@+id/textViewReg"
                 android:layout_width="wrap_content"
@@ -37,15 +26,16 @@
                 android:textSize="30sp"/>
 
         </TableRow>
-        <TableRow>
+        <TableRow android:gravity="center">
             <TextView
                 android:id="@+id/textView1"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:text="Email : "
                 android:textStyle="bold"
                 android:textColor="#ffffff"
                 android:textSize="20sp"
+                android:gravity="center_vertical"
                 app:layout_constraintEnd_toEndOf="@+id/textView2"
                 tools:layout_editor_absoluteY="132dp" />
             <EditText
@@ -58,14 +48,15 @@
                 android:inputType="textEmailAddress" />
         </TableRow>
 
-        <TableRow>
+        <TableRow android:gravity="center">
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="60dp"
                 android:textColor="#ffffffff"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                android:gravity="center_vertical"
                 android:text="Password : "/>
             <EditText
                 android:id="@+id/editTextPassword"
@@ -75,7 +66,7 @@
                 android:background="#ffffff"
                 android:inputType="textPassword" />
         </TableRow>
-        <TableRow>
+        <TableRow android:gravity="center">
 
             <Button
                 android:id="@+id/buttonRegister"
@@ -90,7 +81,7 @@
                 android:onClick="buttonLoginClick"
                 android:text="Login" />
         </TableRow>
-        <TableRow>
+        <TableRow android:gravity="center">
             <TextView
                 android:id="@+id/textViewResult"
                 android:layout_width="wrap_content"
@@ -100,7 +91,7 @@
                 android:textStyle="bold"
                 />
         </TableRow>
-        <TableRow>
+        <TableRow android:gravity="center">
             <Button
                 android:id="@+id/buttonCallSend"
                 android:layout_width="wrap_content"
@@ -109,7 +100,7 @@
                 android:layout_span="2"
                 android:text="Send" />
         </TableRow>
-        <TableRow>
+        <TableRow android:gravity="center">
             <Button
                 android:id="@+id/buttonPark"
                 android:layout_width="wrap_content"
@@ -123,16 +114,7 @@
                 android:onClick="buttonLeeClick"
                 android:text="Lee" />
         </TableRow>
-        <TableRow>
-            <TextView
-                android:id="@+id/textViewSpace2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:layout_span="2"
-                android:textSize="150sp"/>
 
-        </TableRow>
     </TableLayout>
 
 
