[willi] change AnimatedGIFView to ImageView

--- a/source/client/willi/app/src/main/res/layout/activity_callstate.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_callstate.xml
@@ -17,10 +17,10 @@
 
         <TableRow
             android:gravity="center">
-            <com.lg.sixsenses.willi.UserInterface.GifImageView
-                android:id="@+id/GifImageView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <ImageView
+                android:id="@+id/imageViewState"
+                android:layout_width="500px"
+                android:layout_height="500px"
                 android:layout_span="2"
                 android:layout_centerInParent="true" />
         </TableRow>
