--- a/source/client/willi/app/src/main/res/layout/activity_login.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_login.xml
@@ -128,7 +128,17 @@
                 android:onClick="buttonLeeClick"
                 android:text="Lee" />
         </TableRow>
+        <TableRow>
 
+            <Button
+                android:id="@+id/buttonTest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_span="2"
+                android:onClick="buttonTestClick"
+                android:text="TEST" />
+
+        </TableRow>
         <TableRow>
 
             <TextView
