--- a/source/client/willi/app/src/main/res/layout/activity_login.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_login.xml
@@ -46,17 +46,17 @@
         <TableRow>
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/AddEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Email : "
                 android:textColor="#ffffff"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="@+id/textView2"
+                app:layout_constraintEnd_toEndOf="@+id/AddName"
                 tools:layout_editor_absoluteY="132dp" />
             <EditText
-                android:id="@+id/editTextEmail"
+                android:id="@+id/editAddEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
@@ -68,7 +68,7 @@
         <TableRow>
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/AddNum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Password : "
@@ -77,7 +77,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/editTextPassword"
+                android:id="@+id/editAddNum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="#ffffff"
@@ -88,7 +88,7 @@
         <TableRow>
 
             <Button
-                android:id="@+id/buttonRegister"
+                android:id="@+id/AddContact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="buttonRegisterClick"
