--- a/source/client/willi/app/src/main/res/layout/activity_test.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_test.xml
@@ -44,7 +44,7 @@
         <TableRow>
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/AddEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="IP : "
