--- a/source/client/willi/app/src/main/res/layout/fragment_contacts.xml
+++ b/source/client/willi/app/src/main/res/layout/fragment_contacts.xml
@@ -33,9 +33,10 @@
         android:layout_marginTop="350dp">
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/AddButton"
             android:layout_width="355dp"
             android:layout_height="wrap_content"
+            android:onClick="AddContact"
             android:text="Add" />
 
     </TableRow>
