[willi] arrange Activities

--- a/source/client/willi/app/src/main/res/layout/fragment_setting.xml
+++ b/source/client/willi/app/src/main/res/layout/fragment_setting.xml
@@ -6,10 +6,9 @@
     tools:context=".ui.SettingFragment">
 
     <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center_vertical">
-
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
         <TableRow>
 
             <TextView
@@ -17,7 +16,17 @@
                 android:layout_height="wrap_content"
                 android:layout_span="2"
                 android:gravity="center|center_vertical"
-                android:text="Settings" />
+                android:textSize="50sp" />
+        </TableRow>
+        <TableRow>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_span="2"
+                android:gravity="center|center_vertical"
+                android:text="Settings"
+                android:textSize="30sp"/>
         </TableRow>
 
         <TableRow>
