--- a/source/client/willi/app/src/main/res/layout/activity_contact_add.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_contact_add.xml
@@ -68,14 +68,14 @@
         <TableRow>
 
             <Button
-                android:id="@+id/AddClose"
+                android:id="@+id/close"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="AddClose"
                 android:text="Close" />
 
             <Button
-                android:id="@+id/AddContact"
+                android:id="@+id/ForgotPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="buttonRegisterClick"
