--- a/source/client/willi/app/src/main/res/layout/activity_forgot_pw.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_forgot_pw.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserInterface.ContactModifyActivity">
+    tools:context=".ui.ForgotPWActivity">
 
     <TableLayout
         android:layout_width="0dp"
@@ -21,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_span="2"
-                android:text="Contact detail information"
+                android:text="Forgot password"
                 android:textSize="20sp" />
 
         </TableRow>
@@ -33,7 +33,7 @@
                 android:text="Email : "
                 app:layout_constraintEnd_toEndOf="@+id/AddName"
                 tools:layout_editor_absoluteY="132dp" />
-            <TextView
+            <EditText
                 android:id="@+id/editAddEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -42,64 +42,57 @@
         </TableRow>
         <TableRow>
             <TextView
-                android:id="@+id/AddName"
+                android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name : " />
+                android:text="Security Question : " />
+            <Spinner
+                android:id="@+id/spinnerSecurityQuestion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:spinnerMode="dropdown" />
+        </TableRow>
+        <TableRow>
             <TextView
-                android:id="@+id/editAddName"
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Security Answer : " />
+            <EditText
+                android:id="@+id/editTextSecurityAnswer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </TableRow>
         <TableRow>
 
-            <Button
-                android:id="@+id/voicecall"
-                android:layout_width="173dp"
-                android:layout_height="wrap_content"
-                android:text="VoiceCall" />
-
-            <Button
-                android:id="@+id/videocall"
-                android:layout_width="80dp"
-                android:layout_height="wrap_content"
-                android:text="VideoCall" />
-            // android:onClick="buttonCloseClick"
-
-
-            // android:onClick="buttonRegisterClick"
-
-
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-
-            <Button
-                android:id="@+id/ForgotPassword"
+            <TextView
+                android:id="@+id/AddNum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Update" />
-
-            <Button
-                android:id="@+id/deletecontact"
-                android:layout_width="80dp"
+                android:text="New Password : " />
+            <EditText
+                android:id="@+id/editAddNum"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Delete" />
+                android:inputType="textPassword" />
         </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+        <TableRow>
 
             <Button
                 android:id="@+id/close"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:onClick="close"
                 android:text="Close" />
-        </TableRow>
 
+            <Button
+                android:id="@+id/ForgotPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="ForgotPassword"
+                android:text="Forgot Password"
+                android:textAllCaps="false" />
+        </TableRow>
         <TableRow>
             <TextView
                 android:id="@+id/textViewResult"
