--- a/source/client/willi/app/src/main/res/layout/activity_login.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_login.xml
@@ -88,7 +88,7 @@
         <TableRow>
 
             <Button
-                android:id="@+id/AddContact"
+                android:id="@+id/ForgotPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="buttonRegisterClick"
@@ -119,6 +119,7 @@
                 android:layout_height="30dp"
                 android:layout_gravity="top"
                 android:background="#00FFFFFF"
+                android:onClick="forgotPassword"
                 android:text="forgot password?"
                 android:textAlignment="viewEnd"
                 android:textAllCaps="false"
