--- a/source/client/willi/app/src/main/res/layout/fragment_setting.xml
+++ b/source/client/willi/app/src/main/res/layout/fragment_setting.xml
@@ -21,12 +21,12 @@
         <TableRow>
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_span="2"
                 android:gravity="center|center_vertical"
                 android:text="Settings"
-                android:textSize="30sp"/>
+                android:textSize="30sp" />
         </TableRow>
 
         <TableRow>
@@ -60,11 +60,26 @@
                 android:spinnerMode="dropdown" />
 
         </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_span="2"
+                android:background="#00000000"
+                android:text="View my Information"
+                android:textAllCaps="false" />
+        </TableRow>
+
         <TableRow>
 
             <Button
                 android:id="@+id/buttonSave"
-                android:layout_width="wrap_content"
+                android:layout_width="180dp"
                 android:layout_height="wrap_content"
                 android:layout_span="2"
                 android:text="Save" />
