--- a/source/client/willi/app/src/main/res/layout/activity_forgot_pw.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_forgot_pw.xml
@@ -27,7 +27,7 @@
         </TableRow>
         <TableRow>
             <TextView
-                android:id="@+id/AddEmail"
+                android:id="@+id/Email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Email : "
@@ -86,7 +86,7 @@
                 android:text="Close" />
 
             <Button
-                android:id="@+id/ForgotPassword"
+                android:id="@+id/forgotpassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="ForgotPassword"
