--- a/source/client/willi/app/src/main/res/layout/activity_login.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
         <TableRow>
 
             <TextView
-                android:id="@+id/AddEmail"
+                android:id="@+id/Email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Email : "
@@ -88,7 +88,7 @@
         <TableRow>
 
             <Button
-                android:id="@+id/ForgotPassword"
+                android:id="@+id/buttonRegisterClick"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="buttonRegisterClick"
