--- a/source/client/willi/app/src/main/res/layout/activity_my_info.xml
+++ b/source/client/willi/app/src/main/res/layout/activity_my_info.xml
@@ -4,28 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.RegisterActivity">
-
+    tools:context=".ui.MyInfoActivity">
 
     <TableLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="349dp"
+        android:layout_height="262dp"
         android:layout_margin="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TableRow>
+
             <TextView
                 android:id="@+id/textViewReg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Register a new user"
                 android:layout_span="2"
-                android:textSize="20sp"/>
+                android:text="My Information"
+                android:textSize="20sp" />
 
         </TableRow>
+
         <TableRow>
+
             <TextView
                 android:id="@+id/Email"
                 android:layout_width="wrap_content"
@@ -33,83 +35,99 @@
                 android:text="Email : "
                 app:layout_constraintEnd_toEndOf="@+id/AddName"
                 tools:layout_editor_absoluteY="132dp" />
-            <EditText
-                android:id="@+id/editAddEmail"
+
+            <TextView
+                android:id="@+id/TextEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textEmailAddress" />
         </TableRow>
+
         <TableRow>
+
             <TextView
-                android:id="@+id/AddName"
+                android:id="@+id/phonenumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name : " />
-            <EditText
-                android:id="@+id/editAddName"
+                android:text="Phone Number : " />
+
+            <TextView
+                android:id="@+id/viewnumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </TableRow>
+
         <TableRow>
-            <TextView
-                android:id="@+id/AddNum"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Password : "/>
-            <EditText
-                android:id="@+id/editAddNum"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword" />
-        </TableRow>
-        <TableRow>
+
             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Security Question : " />
+
             <Spinner
                 android:id="@+id/spinnerSecurityQuestion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:spinnerMode="dropdown" />
         </TableRow>
+
         <TableRow>
+
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Security Answer : " />
+
             <EditText
                 android:id="@+id/editTextSecurityAnswer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
         </TableRow>
+
         <TableRow>
+
+            <TextView
+                android:id="@+id/editname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Name : " />
+
+            <EditText
+                android:id="@+id/editnewname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </TableRow>
+
+        <TableRow>
+
             <Button
                 android:id="@+id/close"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="buttonCloseClick"
+                android:onClick="close"
                 android:text="Close" />
+
             <Button
-                android:id="@+id/buttonRegisterClick"
+                android:id="@+id/MyInfoSave"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="buttonRegisterClick"
-                android:text="Register" />
+                android:onClick="MyInfoSave"
+                android:text="My Information Save"
+                android:textAllCaps="false" />
         </TableRow>
+
         <TableRow>
+
             <TextView
                 android:id="@+id/textViewResult"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_span="2"
-                />
+                android:layout_span="2" />
         </TableRow>
     </TableLayout>
-
 
 </android.support.constraint.ConstraintLayout>
