--- a/source/client/willi/app/src/main/res/layout/fragment_setting.xml
+++ b/source/client/willi/app/src/main/res/layout/fragment_setting.xml
@@ -66,11 +66,12 @@
             android:layout_height="match_parent">
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/myInfobutton"
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_span="2"
                 android:background="#00000000"
+                android:onClick="myInfobutton"
                 android:text="View my Information"
                 android:textAllCaps="false" />
         </TableRow>
